--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "brozot/laravel-fcm",
+    "name": "spopicdev/laravel-fcm",
     "description": "Laravel / Lumen package for Firebase Cloud Messaging ",
     "keywords": ["laravel", "lumen", "firebase", "notification", "push", "fcm", "firebase cloud messaging"],
     "type": "library",
@@ -8,19 +8,24 @@
         {
             "name": "Nicolas Brosy",
             "email": "nicolas.brosy@gmail.com"
+        },
+        {
+            "name": "Stefan Popic",
+            "email": "stefan.popic@outlook.com"
         }
     ],
     "require": {
-        "php": ">=5.5.9",
-        "illuminate/support": "5.*|^6",
-        "guzzlehttp/guzzle": "~6.0",
+        "php": ">= 8.1",
+        "guzzlehttp/guzzle": "^7.0",
+        "illuminate/notifications": "^9.0|^10.0",
+        "illuminate/support": "^9.0|^10.0",
         "monolog/monolog": "^1.12|^2.0"
     },
     "require-dev": {
-        "mockery/mockery" : "0.9.*",
-        "phpunit/phpunit" : "4.7.*",
-        "satooshi/php-coveralls": "dev-master",
-        "laravel/laravel": "5.2.*"
+        "mockery/mockery": "^1.5.1",
+        "phpunit/phpunit": "^10.0",
+        "php-coveralls/php-coveralls": "^2.6",
+        "laravel/laravel": "10.*"
     },
     "autoload": {
         "psr-4": {
