Solve composer install issues

--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
             "tests/"
         ]
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true,
     "extra": {
         "laravel": {
